# call_runtime_template

./: Cargo.toml  README.md  lib.rs
